--- a/hospital_app/templates/new_login_home.html
+++ b/hospital_app/templates/new_login_home.html
@@ -38,7 +38,7 @@
       <select name="role" class="form-select role-select" required>
         <option value="">Select Role</option>
         <option value="admin">Admin</option>
-        <option value="user">User</option>
+        <option value="patient">Patient</option>
         <option value="doctor">Doctor</option>
       </select>
 
