--- a/hospital_app/templates/new_login_home.html
+++ b/hospital_app/templates/new_login_home.html
@@ -52,7 +52,7 @@
       </p>
 
       <div class="footer-text">
-        <small>Hospital Management System &copy; 2025</small>
+        <small>Hospital Management System &copy; 2025-2026</small>
       </div>
     </form>
   </div>
