--- a/hospital_app/templates/patient_home.html
+++ b/hospital_app/templates/patient_home.html
@@ -4,6 +4,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Patient Home</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/patient_home.css' %}">
@@ -17,12 +18,13 @@
   </div>
   {% endfor %}
   {% endif %}
+
   <div class="container home-container">
     <h2 class="text-center mb-4">Welcome, Patient</h2>
 
     <div class="row justify-content-center">
       <!-- Box 1 -->
-      <div class="col-md-5">
+      <div class="col-12 col-md-5 mb-3">
         <a href="{% url 'book_appointment' %}" class="home-box">
           <h4>Book Appointment</h4>
           <p>Click here to schedule a new appointment with a doctor.</p>
@@ -30,9 +32,9 @@
       </div>
 
       <!-- Box 2 -->
-      <div class="col-md-5">
+      <div class="col-12 col-md-5 mb-3">
         <a href="{% url 'patient_status' %}" class="home-box">
-          <h4>Check Appointment Status</h4>
+          <h4>Appointment Status</h4>
           <p>View the status of your booked appointments.</p>
         </a>
       </div>
