--- a/hospital_app/templates/book_appointment.html
+++ b/hospital_app/templates/book_appointment.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Appointment</title>
-    <link rel="stylesheet" href="{% static 'css/book_appointment.css' %}">
+    <link rel="stylesheet" href="{% static 'css/book_appointment.css' %}?v=2">
 </head>
 <body>
 
