--- a/hospital_app/templates/doctor_home.html
+++ b/hospital_app/templates/doctor_home.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Doctor Appointments</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/doctor_home.css' %}">
+    <link rel="stylesheet" href="{% static 'css/doctor_home.css' %}?v=2">
 </head>
 
 <body>
