--- a/hospital_app/templates/admin_home.html
+++ b/hospital_app/templates/admin_home.html
@@ -24,6 +24,12 @@
             <a href="{% url 'patient_add_page'%}" class="big-btn patient-btn">
                 Manage Patients
             </a>
+
+                <!-- New Payment Details Button -->
+            <a href="{% url 'admin_payment_details' %}" class="big-btn payment-btn">
+                 Payment Details
+            </a>
+            
             <!-- Logout button / link -->
             <a href="{% url 'adminpage_logout' %}" style="float:right; margin:10px; color:red;">
                  Logout
