--- a/hospital_app/templates/patient_home.html
+++ b/hospital_app/templates/patient_home.html
@@ -20,7 +20,7 @@
   {% endif %}
 
   <div class="container home-container">
-    <h2 class="text-center mb-4">Welcome, Patient</h2>
+    <h2 class="text-center mb-4">Welcome,{{patient.name}}</h2>
 
     <div class="row justify-content-center">
       <!-- Box 1 -->
